--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </td>
           <td class="subtotal">$<span>0</span></td>
           <td class="action">
-            <button class="btn btn-remove">Remove</button>
+            <button id='remove-btn' class="btn btn-remove">Remove</button>
           </td>
         </tr>
         
